[gd_scene load_steps=3 format=3 uid="uid://b6eoph2qpu0d"]

[ext_resource type="Script" path="res://Scripts/UI/settings_menu.gd" id="1_88deh"]
[ext_resource type="PackedScene" uid="uid://b7jfsxfq2gkxs" path="res://Scenes/UI/VolumeSlider.tscn" id="2_brx2j"]

[node name="SettingsMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="Margin"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Margin/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("1_88deh")

[node name="Title" type="Label" parent="Margin/Scroll/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Settings"
horizontal_alignment = 1

[node name="ToggleAutoStart" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Auto start"

[node name="ToggleDefaultAIPlayers" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Players start as AI"

[node name="ToggleStreamerMode" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Streamer mode"

[node name="ToggleDiscordRPC" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Discord RPC"

[node name="ToggleFullscreen" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Fullscreen"

[node name="ToggleAutoFullscreen" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Auto FullScreen - Main menu is windowed, but game is kept in fullscreen"

[node name="LibSpearIntegrityChecks" type="HBoxContainer" parent="Margin/Scroll/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/Scroll/VBox/LibSpearIntegrityChecks"]
layout_mode = 2
text = "LibSpear integrity checks:      "

[node name="Option" type="OptionButton" parent="Margin/Scroll/VBox/LibSpearIntegrityChecks"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="EnableFuzzingMode" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Enable fuzzing mode (auto-restart battle when it ends)"

[node name="ToggleBackgroundColorFollowsPlayers" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Background color changes with player's turns"

[node name="ToggleAutoWin" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Auto Win"

[node name="ToggleAutoWinAgainstNeutrals" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "Auto Win against Neutrals"

[node name="ToggleWorldGodMode" type="CheckBox" parent="Margin/Scroll/VBox"]
layout_mode = 2
text = "World God Mode - Automatically calls cheats like: 
FAST, MONEY, MAX_UPGRADE, LEVELUP, whenever city/hero is selected"

[node name="OptionGuiAnimationMode" type="HBoxContainer" parent="Margin/Scroll/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/Scroll/VBox/OptionGuiAnimationMode"]
layout_mode = 2
text = "GUI Animations:      "

[node name="Option" type="OptionButton" parent="Margin/Scroll/VBox/OptionGuiAnimationMode"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="VolumeContainer" type="VBoxContainer" parent="Margin/Scroll/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/Scroll/VBox/VolumeContainer"]
layout_mode = 2
text = "Volume"

[node name="Sliders" type="HBoxContainer" parent="Margin/Scroll/VBox/VolumeContainer"]
layout_mode = 2

[node name="Master" parent="Margin/Scroll/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "Master"

[node name="Music" parent="Margin/Scroll/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "Music"

[node name="Game" parent="Margin/Scroll/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "Game FX"

[node name="UI" parent="Margin/Scroll/VBox/VolumeContainer/Sliders" instance=ExtResource("2_brx2j")]
layout_mode = 2
title = "GUI"
